# AoC

./: README.md
2016/day01/: CMakeLists.txt  part1.cpp  part2.cpp
2016/day02/: part1.cpp  part2.cpp
2016/day03/: part1.cpp  part2.cpp
2025/day01/: CMakeLists.txt  part1.cpp  part2.cpp
2025/day02/: part1.cpp  part2.cpp
2025/day03/: part1.cpp  part2.cpp
2025/day04/: part1.cpp  part2.cpp
2025/day05/: part1.cpp  part2.cpp
2025/day06/: part1.cpp  part2.cpp
2025/day07/: part1.cpp  part2.cpp
include/: aoc.hpp
template/dayxx/: CMakeLists.txt  part1.cpp
template/include/: aoc.hpp
